chapter11/enforce-ingress/yaml/gatekeeper-policy-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8senforceingress
spec:
  crd:
    spec:
      names:
        kind: K8sEnforceIngress
      validation: {}
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |-
        package k8senforceingress

        violation[{"msg":msg,"details":{}}] {
            missingIngressLabel
            msg := "Missing label allowingress: \"true\""
        }

        missingIngressLabel {
            data.inventory.cluster["v1"].Namespace[input.review.object.metadata.namespace].metadata.labels["allowingress"] != "true"
        }
