chapter11/enforce-ingress/yaml/gatekeeper-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEnforceIngress
metadata:
  name: require-ingress-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Ingress"]
